src/components/Accord/Accord.css
.AccordBox {
  width: 60%;
  border: 5px solid orange;
  border-radius: 20px;
  margin: auto;
}
.BreakDiv {
  padding: 0;
  margin: 0;
}

.button {
  background-color: #4caf50; /* Green */
  border: none;
  color: white;
  padding: 6px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin-left: 5px;
  cursor: pointer;
  border-radius: 5px;
  border: 1px solid black;
  margin: auto;
}

.button2 {
  background-color: #008cba;
  margin-left: 5px;
} /* Blue */
.button3 {
  background-color: #f44336;
  margin-left: 5px;
}
.button4 {
  background-color: #e7e7e7;
  color: black;
}

